<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceScreen android:key="conn_params" android:title="@string/conn_params">
        <EditTextPreference android:title="@string/serv_address_str" android:key="serv_address"/>
        <EditTextPreference android:title="@string/serv_port_str" android:key="serv_port" android:inputType = "number"/>
        <EditTextPreference android:title="@string/serv_login_str" android:key="serv_login"/>
        <EditTextPreference android:title="@string/serv_pass_str" android:key="serv_pass" android:password = "true" />
        <EditTextPreference android:key="serv_delay" android:summary="@string/serv_delay_sum" 
            android:title="@string/serv_delay_str" android:inputType = "number"/>   
    </PreferenceScreen>
    <CheckBoxPreference android:summary="@string/check_contact_list_sum" android:key="check_contact_list" 
        android:title="@string/check_contact_list_str" android:defaultValue="true"/>
    <Preference android:title="@string/edit_contact_list_str" android:key="edit_contact_list">
    	<intent 
        android:action="android.intent.action.VIEW"
        android:targetPackage="com.example.smsgate"
        android:targetClass="com.example.smsgate.EditContactsListActivity"
    />
    </Preference>
    

</PreferenceScreen>
